...
"Amazon" = "Amazon";

/* Authentication prompt title */
"Authentication required" = "Authentication required";

/* Accessibility label for the Back button in the tab toolbar. */
"Back" = "Backwards";

/* Block pop-up windows setting */
"Block Pop-up Windows" = "Block Pop-up Windows";

/* The header title for the fields when editing a Bookmark */
"Bookmark.BookmarkDetail.FieldsHeader.Bookmark.Title" = "Bookmark";
...
"Display Settings" = "Display Settings";

/* Used as a button label for crash dialog prompt */
"Don’t Send" = "Don't Send";

/* Done button on left side of the Settings view controller title bar */
"Done" = "Done";

/* Panel accessibility label */
"Downloads" = "Downloads";

/* The label of the button the user will press to start downloading a file */
"Downloads.Alert.DownloadNow" = "Download Now";
...
"DownloadsPanel.Delete.Title" = "Delete";

/* Title for the Downloads Panel empty state. */
"DownloadsPanel.EmptyState.Title" = "Downloaded files will show up here.";

/* Action button for sharing downloaded files in the Downloads panel. */
"DownloadsPanel.Share.Title" = "Share";

/* Text message in the settings table view */
"Enter your password to connect" = "Enter your password to connect";

/* Label for button to perform advanced actions on the error page */
"ErrorPages.Advanced.Button" = "Advanced";
...
"Reading list" = "Reading list";

/* Title for the Recently Closed Tabs Panel */
"RecentlyClosedTabsPanel.Title" = "Recently Closed";

/* Accessibility Label for the tab toolbar Reload button */
"Reload" = "Reload";

/* Accessibility label for the reload button */
"Reload page" = "Reload page";

/* Title for the button that removes a reading list item */
"Remove" = "Remove";
...

/* Label for show search suggestions setting. */
"Show Search Suggestions" = "Show Search Suggestions";

/* Accessibility label for the tabs button in the (top) tab toolbar
   Accessibility Label for the tabs button in the tab toolbar */
"Show Tabs" = "Show Tabs";

/* Show the on-boarding screen again from the settings */
"Show Tour" = "Show Tour";

/* Accessibility Label for the tab toolbar Stop button */
"Stop" = "Stop";
...
