...
                TabToolbarButtons.AddToSpace(action: onSaveToSpace)
                TabToolbarButtons.ShowTabs(action: onShowTabs, buildMenu: tabsMenu)
            }
            .padding(.top, 2)
            .background(Color.chrome.ignoresSafeArea())
            .accessibilityElement(children: .contain)
            .accessibilityIdentifier("TabToolbar")
        }.accentColor(.label)
    }
}

struct TabToolbarView_Previews: PreviewProvider {
    static var previews: some View {
...
