...
            tapGesture.delegate = self
            addGestureRecognizer(longPressGesture)
            addGestureRecognizer(tapGesture)
            tapGesture.require(toFail: longPressGesture)
            addInteraction(dragInteraction)

            accessibilityLabel = "Address Bar"
            accessibilityTraits.formUnion(.button)
            isAccessibilityElement = true
            accessibilityCustomActions = [
                .init(name: wrapper.copyAction.name, target: self, selector: #selector(copy(_:))),
                .init(name: wrapper.pasteAction.name, target: self, selector: #selector(paste(_:))),
                .init(
...
